# FFT_model_tune

./: .gitignore  AGENTS.md  Complete_GUI_Workflows_Guide.md  README.md  README_setup.md  Trinity_Agricultural_AI_Resources.md  agricultural_dataset.json  clean_train.py  complete_setup.py  comprehensive_agricultural_dataset.json  consolidated_agricultural_dataset.json  download_model.py  fine_tune_agricultural.py  fine_tune_agricultural_complete.py  fixed_train.py  generate_dataset.py  monitor_download.py  project_manager.py  project_status.sh  pyproject.toml  quick_status.sh  quick_train.py  requirements.txt  test_and_analyze.py  test_trinity_base.py  train_qwen.py
backup_datasets_20251209_234245/: comprehensive_agricultural_dataset.json  enhanced_agricultural_dataset.json
utils/: terminal_ui.py
